fix a janky gap between div and svg.

--- a/css/core.css
+++ b/css/core.css
@@ -197,6 +197,7 @@ button.arrow-only {
 .angled-background-top, .angled-background-bottom {
   display: block;
   transition: all 0.5s ease;
+  margin-top: -2px;
 }
 
 .left-triangle {
